appId: vercel.app.deer_social
---
- runScript:
    file: ../../setupServer.js
    env:
        SERVER_PATH: ?users&follows&posts&feeds
- runFlow:
    file: ../../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

- tapOn:
    id: "postDropdownBtn"
    index: 0
- tapOn:
    id: "postDropdownReportBtn"
- tapOn:
    id: "report:option:com.atproto.moderation.defs#reasonSpam"
- assertVisible:
    id: "report:labeler:mod-authority.test"
- tapOn:
    id: "report:submit"
- assertNotVisible:
    id: "report:dialog"
