appId: vercel.app.deer_social
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

- tapOn:
    id: "e2eStartOnboarding"
- tapOn: "Open avatar creator"
- tapOn: "Select the zap emoji as your avatar"
- tapOn:
    label: "Tap on yellow"
    point: "23%,79%"
- tapOn: "Done"
- waitForAnimationToEnd
- tapOn: "Select an avatar"
- tapOn: "Select the atom emoji as your avatar"
- tapOn: "Done"
- waitForAnimationToEnd
- tapOn:
    id: "onboardingContinue"
- assertVisible: "What are your interests?"
- tapOn:
    id: "onboardingContinue"
- assertVisible: "You're ready to go!"
- tapOn:
    id: "onboardingFinish"
- tapOn:
    label: "NUX, if applicable"
    text: "Close"
    optional: true
- waitForAnimationToEnd
- assertVisible: "Following"
