appId: vercel.app.deer_social
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users&follows&labels"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

# create a modlist
- tapOn:
    id: "e2eGotoModeration"
- tapOn:
    id: "moderationlistsBtn"
- tapOn: "New list"
- tapOn:
    id: "editNameInput"
- inputText: "Muted Users"
- tapOn:
    id: "editDescriptionInput"
- inputText: "Shhh"
- tapOn: "Save"
- tapOn: "Save"

# view modlist
- assertVisible: "Muted Users"
- assertVisible: "Shhh"

# DOES NOT WORK - THE BUTTON IS NOT ACCESSIBLE
# IGNORING FOR NOW, FIX THE COMPONENTS IN THE NEXT RELEASE
# BECAUSE THIS IS A LEGIT A11Y PROBLEM -sfn
- tapOn: "Subscribe to this list"
- tapOn: "Mute accounts"
- tapOn: "Mute list"
- tapOn: "Unmute"

- tapOn: "Subscribe to this list"
- tapOn: "Block accounts"
- tapOn: "Block list"
- tapOn: "Unblock"

  # the rest of the behaviors are tested in curate-lists.yml
